Thu Jun 30 23:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* misc/ruby-mode.el (ruby-indent-beg-re): Fix broken regular
	  expression.  Fixes #4546

Thu Jun 30 23:43:30 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl.c/.h: Added ossl_x509_name_sk2ary.
	* ext/openssl/ossl.c: Replaced ossl_x509_ary2k by generic macro to
	  simplify future conversions.
	* ext/openssl/ossl_ssl.c: Implement SSLSocket#client_ca.
	* test/openssl/test_ssl.rb: Add test for SSLSocket#client_ca.
	  Thanks to Ippei Obayashi for providing the patch!
	  [ Ruby 1.9 - Feature #4481 ] [ruby-core:35461]

Thu Jun 30 22:38:58 2011  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_defined_method.rb: added to measure performance of
	  bmethod (method defined by define_method()).

Thu Jun 30 22:17:04 2011  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_bmethod): fix to hook call/return event
	  for methods defined by define_method().  fixes Bug #4613.

	* thread.c (call_trace_proc): Fix to skip if class is not given (0).
	  Note that ID and Class object are passed for call/return event
	  if the called method was defined by define_method().
	  If you are author of tracer/profiler/debugger, this may be an
	  important change.  You should check passed class as zero or
	  non-zero instead of checking the event type.

	* test/ruby/test_settracefunc.rb: add a test for above.

Thu Jun 30 21:18:35 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: Add warnflags for XL/C on AIX during configure
	  to avoid [Bug #3971]. See [ruby-core:32859]

Thu Jun 30 21:16:04 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (m_ajd): refers a constant.

Thu Jun 30 20:54:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	  * ext/io/console/io-console.gemspec: spin-off gem for 1.9.2.

Thu Jun 30 20:36:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: trivial changes.

Thu Jun 30 20:12:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
