@@ -1,3 +1,7 @@
+Fri Jul  1 03:24:03 2011  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* ext/date/date_core.c: mathn still alive (should die soon).
+
 Thu Jun 30 23:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>
 
 	* misc/ruby-mode.el (ruby-indent-beg-re): Fix broken regular
